# moe-surgeon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  package.json  pyproject.toml  sitecustomize.py
.github/workflows/: metrics.yml
.supervisor/: project.json
.supervisor/logs/: task-f6b8a2ff.metrics.json
.supervisor/memory/: gotchas.md  session_insights.json
.supervisor/recovery/: attempt_history.json
.tmp/pytest/: test_actual_supervisor_collectcurrent  test_cli_version_commands_are_current  test_direct_quality_gate_commacurrent  test_repo_metrics_quality_commcurrent
.tmp/pytest/test_direct_quality_gate_comma0/: pyproject.toml
.tmp/system/tmp8k_kho0j/: model.safetensors
.tmp/system/tmpbomkf8su/: config.json
src/: sitecustomize.py
src/moe_surgeon/: __init__.py  __main__.py  repo_metrics.py  schemas.py  test_env.py
src/moe_surgeon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/moe_surgeon/analysis/: __init__.py  metrics.py  scan.py
src/moe_surgeon/cli/: __init__.py  main.py
tests/: conftest.py  test_analysis_scan.py  test_api_eval.py  test_backend_registry.py  test_cli.py  test_cli_flow.py  test_docs_consistency.py  test_export_manifest.py  test_export_pipeline.py  test_models_checkpoints.py  test_models_gemma4.py  test_models_gguf.py  test_models_qwen35moe_gguf.py  test_models_registry.py  test_prune_apply.py  test_prune_planner.py  test_prune_strategy.py  test_repo_metrics.py  test_runtime_profiler.py  test_schemas.py
tests/fixtures/: tiny_gemma_like.py
(+28 files in other folders)
