[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-surgeon"
version = "0.1.0"
description = "Python CLI for analyzing and pruning MoE models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1; python_version >= '3.10'",
  "transformers>=5.5.0; python_version >= '3.10'",
  "safetensors>=0.4; python_version >= '3.10'",
  "click>=8.1; python_version >= '3.10'",
]

[project.scripts]
moe-surgeon = "moe_surgeon.cli.main:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.11",
  "pytest>=8.4",
  "pytest-cov>=5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["sitecustomize"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["moe_surgeon*"]
namespaces = false

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
incremental = false

[tool.pytest.ini_options]
addopts = [
  "--disable-plugin-autoload",
  "--basetemp=.tmp/pytest",
  "--strict-markers",
  "-m",
  "not integration",
]
testpaths = ["tests"]
markers = [
  "integration: opt-in tests that may access live external services or model artifacts",
]
